--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ path {
     fill: #c4e4e8 ;
 }
 
-#Novo_Airao,  #Codajás, #Coari, #Beruri, #Manaquiri, #Anori, #Manaus, #Rio_Preto_da_Eva, #Iranduba,
+#Novo_Airão,  #Codajás, #Coari, #Beruri, #Manaquiri, #Anori, #Manaus, #Rio_Preto_da_Eva, #Iranduba,
 #Caapiranga, #Manacapuru, #Anamã, #Careiro, #Careiro_da_Varzea {
     fill: #d6e8d1
 }
@@ -122,7 +122,7 @@ path {
     fill: #f7f0c1
 }
 
-#Humaitá, #Manicoré, #Apuí, #Borba, #Novo_Aripuana {
+#Humaitá, #Manicoré, #Apuí, #Borba, #Novo_Aripuanã {
     fill: #f5debb;
 }
 
